# DonkeyWork-Agentlings

./: .env.example  .gitignore  CLAUDE.md  DESIGN-memory-sleep.md  Dockerfile  README.md  agent.example.yaml  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: go-rewrite-viability.md
go/: Dockerfile  docker-compose.test.yml  go.mod  go.sum
go/cmd/agentling/: main.go
go/internal/config/: config.go  config_test.go
go/internal/llm/: anthropic.go  llm.go  mock.go  mock_test.go
go/internal/logging/: logging.go
go/internal/loop/: loop.go  loop_test.go
go/internal/models/: models.go  models_test.go
go/internal/prompt/: prompt.go  prompt_test.go
go/internal/protocol/: a2a.go  agentcard.go  agentcard_test.go  mcp.go
go/internal/server/: server.go
go/internal/store/: store.go  store_test.go
go/internal/tools/: builtins.go  builtins_test.go  registry.go  registry_test.go
go/tests/: Dockerfile
go/tests/integration/: integration_test.go
scripts/: release.sh
src/agentlings/: __init__.py  __main__.py  a2a_handler.py  agent_card.py  config.py  llm.py  log.py  loop.py  mcp_handler.py  models.py  prompt.py  server.py  store.py  tools.py
src/agentlings/cli/: __init__.py  _migrations.py  _templates.py  _version.py  init.py  upgrade.py
src/agentlings/core/: __init__.py  completion.py  llm.py  loop.py  memory_models.py  memory_store.py  models.py  prompt.py  scheduler.py  skills.py  sleep.py  store.py  task.py  telemetry.py
src/agentlings/migrations/: __init__.py  m0001_seed.py
src/agentlings/protocol/: __init__.py  a2a.py  a2a_task_store.py  agent_card.py  mcp.py
src/agentlings/templates/: __init__.py
src/agentlings/templates/default/: .env.example  agent.yaml
src/agentlings/tools/: __init__.py  builtins.py  decorator.py  loader.py  memory.py  registry.py
src/agentlings/tools/examples/: __init__.py  echo.py  geocode.py  http_get.py  set_severity.py
tests/: Dockerfile  agent.test.yaml
tests/integration/: a2a_client.py  conftest.py  mcp_client.py  test_a2a.py  test_agent_card.py  test_mcp.py  test_ollama.py  test_task_flow.py
tests/unit/: conftest.py  test_a2a_executor.py  test_a2a_task_store.py  test_agent_card.py  test_auth_middleware.py  test_cli_init.py  test_cli_upgrade.py  test_completion.py  test_config.py  test_live_api.py  test_llm.py  test_logging.py  test_loop.py  test_mcp_handler.py  test_mcp_icons.py  test_memory_models.py  test_memory_store.py  test_memory_tool.py  test_models.py  test_prompt.py  test_scheduler.py  test_skills.py  test_sleep.py  test_store.py  test_task.py  test_telemetry.py  test_tool_decorator.py  test_tool_loader.py  test_tools.py
