[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlings"
version = "0.6.1"
description = "Lightweight A2A + MCP single-process agent framework"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Andrew Morgan", email = "dboyandy@gmail.com" },
]
keywords = ["a2a", "mcp", "agent", "anthropic", "claude", "agentling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52",
    "a2a-sdk>=1.0.0",
    "starlette>=0.46",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    "mcp>=1.10.0",
    "python-dotenv>=1.1",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "a2a-sdk>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/andyjmorgan/DonkeyWork-Agentlings"
Repository = "https://github.com/andyjmorgan/DonkeyWork-Agentlings"
Issues = "https://github.com/andyjmorgan/DonkeyWork-Agentlings/issues"

[project.scripts]
agentling = "agentlings.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentlings"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "ollama: integration tests that require a live Ollama server reachable at OLLAMA_HOST",
]
# Silence noisy transitive-dependency deprecations. These are issues in
# FastAPI/uvicorn/websockets/MCP SDK internals, not our code, and appear on
# every integration test run. Keep the filter scoped narrowly so our own
# warnings still surface.
filterwarnings = [
    "ignore:'HTTP_422_UNPROCESSABLE_ENTITY' is deprecated:DeprecationWarning",
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore:websockets.server.WebSocketServerProtocol is deprecated:DeprecationWarning",
    "ignore:Use `streamable_http_client` instead.:DeprecationWarning",
]
